Updated intro presentation.

--- a/materials/2017_11_15/intro_scrum_club/intro_scrum_club.tex
+++ b/materials/2017_11_15/intro_scrum_club/intro_scrum_club.tex
@@ -72,6 +72,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 \begin{frame}{Logistics}
 
 \begin{itemize}
@@ -104,15 +105,36 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Certifying Attendance}
+
+\begin{itemize}
+   \item can certify attendance for anybody who wants this
+   \item put your name on attendance sheet at each meeting
+   \item for ECTS points:
+   \begin{itemize}
+      \item 2 hours per meeting (includes preparation time)
+      \item 8 hours for giving a presentation
+      \item 28 hours = 1 ECTS point
+   \end{itemize}
+   \item ask us for a letter certifying participation/points
+\end{itemize}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}{Links}
 
 \begin{itemize}
    \item website: {\footnotesize \url{https://wviechtb.github.io/scrum-club/}}
    \begin{itemize}
       \item keep an eye on the `blog' for announcements
-      \item want to be listed on the members list? make a \href{https://help.github.com/articles/about-pull-requests/}{pull request} on GitHub or send your info to Wolfgang\footnote{wolfgang.viechtbauer at maastrichtuniversity.nl}, Ozan\footnote{ozan.cinar at maastrichtuniversity.nl}, or Sander\footnote{sander.van.kuijk at mumc.nl} via email
+      \item want to be on the members list? make a \href{https://help.github.com/articles/about-pull-requests/}{pull request} on GitHub or send your info to Wolfgang\footnote{wolfgang.viechtbauer at maastrichtuniversity.nl}, Ozan\footnote{ozan.cinar at maastrichtuniversity.nl}, or Sander\footnote{sander.van.kuijk at mumc.nl} via email
    \end{itemize}
    \item Slack channel: {\footnotesize \url{https://scrum-club.slack.com/}}
+   \begin{itemize}
+      \item esp. for organization / planning / logistics
+   \end{itemize}
 \end{itemize}
 
 \end{frame}
